--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* need to clean up css !!!! */
+/* lots of repetitive code dont have time to go througb and delete */
 :root {
   /* Colors */
   --primary: #4361ee;
